new proj/src/objects/EHS_Security_Restriction__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This object will store the info for security restriction for each country or related provinces</description>
    <fields>
        <fullName>Is_Medical_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Medical Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Security_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Security Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Location_Country__c</fullName>
        <label>Site Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Location_Region__c</fullName>
        <label>Site Location Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EHS Security Restriction</label>
</CustomObject>